// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddReviews component renders correctly 1`] = `
<div
  className="add-review modal-window"
>
  <form
    className="modal-content"
    onSubmit={[Function]}
  >
    <div
      className="form-content"
    >
      <h2>
        Write Your Review
      </h2>
      <h3>
        About the [Product Name]
      </h3>
      <button>
        Close
      </button>
      <div>
        <label
          htmlFor="rating"
        >
          Overall Rating: 
        </label>
        <div
          className="starComponent"
        >
          <div>
            <div
              className="star-rating-input"
            >
              <div
                className="starContainer"
                style={
                  Object {
                    "alignItems": "center",
                    "display": "inline-flex",
                    "paddingLeft": "0.5rem",
                    "position": "relative",
                  }
                }
              >
                <div
                  className="starBase"
                  style={
                    Object {
                      "display": "flex",
                      "width": "100%",
                    }
                  }
                >
                  <svg
                    className="star"
                    enableBackground="new 0 0 24 24"
                    fill="#f8d448"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <rect
                        fill="none"
                        height="24"
                        width="24"
                        x="0"
                      />
                      <polygon
                        id={1}
                        onClick={[Function]}
                        points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                        stroke="#646464"
                      />
                    </g>
                  </svg>
                  <svg
                    className="star"
                    enableBackground="new 0 0 24 24"
                    fill="#f8d448"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <rect
                        fill="none"
                        height="24"
                        width="24"
                        x="0"
                      />
                      <polygon
                        id={2}
                        onClick={[Function]}
                        points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                        stroke="#646464"
                      />
                    </g>
                  </svg>
                  <svg
                    className="star"
                    enableBackground="new 0 0 24 24"
                    fill="#f8d448"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <rect
                        fill="none"
                        height="24"
                        width="24"
                        x="0"
                      />
                      <polygon
                        id={3}
                        onClick={[Function]}
                        points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                        stroke="#646464"
                      />
                    </g>
                  </svg>
                  <svg
                    className="star"
                    enableBackground="new 0 0 24 24"
                    fill="#f8d448"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <rect
                        fill="none"
                        height="24"
                        width="24"
                        x="0"
                      />
                      <polygon
                        id={4}
                        onClick={[Function]}
                        points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                        stroke="#646464"
                      />
                    </g>
                  </svg>
                  <svg
                    className="star"
                    enableBackground="new 0 0 24 24"
                    fill="#f8d448"
                    height="24px"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <rect
                        fill="none"
                        height="24"
                        width="24"
                        x="0"
                      />
                      <polygon
                        id={5}
                        onClick={[Function]}
                        points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                        stroke="#646464"
                      />
                    </g>
                  </svg>
                </div>
                <div
                  className="starOverlay"
                  style={
                    Object {
                      "backgroundColor": "white",
                      "bottom": "0",
                      "mixBlendMode": "color",
                      "opacity": "unset",
                      "pointerEvents": "none",
                      "position": "absolute",
                      "right": "0",
                      "top": "0",
                      "width": "100%",
                      "zIndex": "1",
                    }
                  }
                />
              </div>
              <p />
            </div>
          </div>
        </div>
      </div>
      <div>
        <label
          htmlFor="recommend"
        >
          Do you recommend this product? 
        </label>
        <label>
          Yes 
        </label>
        <input
          name="recommend"
          type="radio"
          value={true}
        />
        <label>
          No 
        </label>
        <input
          name="recommend"
          type="radio"
          value={false}
        />
      </div>
      <div>
        <label
          htmlFor="characteristics"
        >
          Characteristics: 
        </label>
        <div
          className="radio-buttons"
        >
          <label
            htmlFor="Size"
          >
            Size
          </label>
          <div>
            <div />
            <label
              htmlFor="Size"
            >
              1
            </label>
            <input
              name="Size"
              onClick={[Function]}
              type="radio"
              value={1}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Size"
            >
              2
            </label>
            <input
              name="Size"
              onClick={[Function]}
              type="radio"
              value={2}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Size"
            >
              3
            </label>
            <input
              name="Size"
              onClick={[Function]}
              type="radio"
              value={3}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Size"
            >
              4
            </label>
            <input
              name="Size"
              onClick={[Function]}
              type="radio"
              value={4}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Size"
            >
              5
            </label>
            <input
              name="Size"
              onClick={[Function]}
              type="radio"
              value={5}
            />
          </div>
        </div>
        <div
          className="radio-buttons"
        >
          <label
            htmlFor="Width"
          >
            Width
          </label>
          <div>
            <div />
            <label
              htmlFor="Width"
            >
              1
            </label>
            <input
              name="Width"
              onClick={[Function]}
              type="radio"
              value={1}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Width"
            >
              2
            </label>
            <input
              name="Width"
              onClick={[Function]}
              type="radio"
              value={2}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Width"
            >
              3
            </label>
            <input
              name="Width"
              onClick={[Function]}
              type="radio"
              value={3}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Width"
            >
              4
            </label>
            <input
              name="Width"
              onClick={[Function]}
              type="radio"
              value={4}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Width"
            >
              5
            </label>
            <input
              name="Width"
              onClick={[Function]}
              type="radio"
              value={5}
            />
          </div>
        </div>
        <div
          className="radio-buttons"
        >
          <label
            htmlFor="Comfort"
          >
            Comfort
          </label>
          <div>
            <div />
            <label
              htmlFor="Comfort"
            >
              1
            </label>
            <input
              name="Comfort"
              onClick={[Function]}
              type="radio"
              value={1}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Comfort"
            >
              2
            </label>
            <input
              name="Comfort"
              onClick={[Function]}
              type="radio"
              value={2}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Comfort"
            >
              3
            </label>
            <input
              name="Comfort"
              onClick={[Function]}
              type="radio"
              value={3}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Comfort"
            >
              4
            </label>
            <input
              name="Comfort"
              onClick={[Function]}
              type="radio"
              value={4}
            />
          </div>
          <div>
            <div />
            <label
              htmlFor="Comfort"
            >
              5
            </label>
            <input
              name="Comfort"
              onClick={[Function]}
              type="radio"
              value={5}
            />
          </div>
        </div>
      </div>
      <div>
        <label
          htmlFor="summary"
        >
          Review Summary: 
        </label>
        <input
          name="summary"
          placeholder="Example: Best purchase ever!"
          type="text"
        />
      </div>
      <div>
        <label
          htmlFor="body"
        >
          Review Body: 
        </label>
        <input
          maxLength="1000"
          name="body"
          onChange={[Function]}
          placeholder="Why did you like the product or not?"
          type="text"
        />
        <p>
          Minimum required characters left: 
          50
        </p>
      </div>
      <div>
        <label
          htmlFor="photos"
        >
          Upload photos: 
        </label>
        <input
          name="photos"
          type="file"
        />
      </div>
      <div>
        <label
          htmlFor="nickname"
        >
          Nickname: 
        </label>
        <input
          maxLength="60"
          name="nickname"
          type="text"
        />
        <p>
          For privacy reasons, do not use your full name or email address
        </p>
      </div>
      <div>
        <label
          htmlFor="email"
        >
          Email: 
        </label>
        <input
          maxLength="60"
          name="email"
          type="text"
        />
        <p>
          For authentication reasons, you will not be emailed
        </p>
      </div>
      <input
        type="submit"
      />
    </div>
  </form>
</div>
`;

exports[`Ratings component renders correctly 1`] = `
<div
  className="ratings"
>
  <h4>
    Ratings & Reviews
  </h4>
  <div
    className="ratings-summary"
  >
    <h2>
      3.5
    </h2>
    <div
      className="starComponent"
    >
      <div />
    </div>
    <p>
      100% of the reviews recommend this product
    </p>
  </div>
  <div
    className="ratings-breakdown"
  >
    <div>
      5 stars ------------
    </div>
    <div>
      4 stars ------------
    </div>
    <div>
      3 stars ------------
    </div>
    <div>
      2 stars ------------
    </div>
    <div>
      1 stars ------------
    </div>
  </div>
  <div
    className="ratings-product-breakdown"
  >
    Ratings Product Breakdown Placeholder
  </div>
</div>
`;

exports[`RatingsWidget component renders correctly 1`] = `
<div
  className="ratings-and-reviews"
>
  <div
    className="ratings"
  >
    <h4>
      Ratings & Reviews
    </h4>
    <div
      className="ratings-summary"
    >
      <h2>
        3.5
      </h2>
      <div
        className="starComponent"
      >
        <div />
      </div>
      <p>
        100% of the reviews recommend this product
      </p>
    </div>
    <div
      className="ratings-breakdown"
    >
      <div>
        5 stars ------------
      </div>
      <div>
        4 stars ------------
      </div>
      <div>
        3 stars ------------
      </div>
      <div>
        2 stars ------------
      </div>
      <div>
        1 stars ------------
      </div>
    </div>
    <div
      className="ratings-product-breakdown"
    >
      Ratings Product Breakdown Placeholder
    </div>
  </div>
  <div
    className="reviews"
  >
    <div
      className="reviews-sorting"
    >
      <label
        htmlFor="sorting-option"
      >
        0
         reviews, sorted by 
      </label>
      <select
        name="sorting-option"
        onChange={[Function]}
      >
        <option
          value="relevant"
        >
          relevant
        </option>
        <option
          value="helpful"
        >
          helpful
        </option>
        <option
          value="newest"
        >
          newest
        </option>
      </select>
    </div>
    <div
      className="reviews-list"
    />
    <div
      className="reviews-buttons"
    >
      <button
        onClick={[Function]}
      >
        ADD A REVIEW + 
      </button>
    </div>
  </div>
</div>
`;

exports[`ReviewTile component renders correctly 1`] = `
<div
  className="review-tile"
>
  <div
    className="review-header"
  >
    <div
      className="starComponent"
    >
      <div>
        <div
          className="star-rating-input"
        >
          <div
            className="starContainer"
            style={
              Object {
                "alignItems": "center",
                "display": "inline-flex",
                "paddingLeft": "0.5rem",
                "position": "relative",
              }
            }
          >
            <div
              className="starBase"
              style={
                Object {
                  "display": "flex",
                  "width": "100%",
                }
              }
            >
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={1}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={2}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={3}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={4}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
              <svg
                className="star"
                enableBackground="new 0 0 24 24"
                fill="#f8d448"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <rect
                    fill="none"
                    height="24"
                    width="24"
                    x="0"
                  />
                  <polygon
                    id={5}
                    onClick={[Function]}
                    points="14.43,10 12,2 9.57,10 2,10 8.18,14.41 5.83,22 12,17.31 18.18,22 15.83,14.41 22,10"
                    stroke="#646464"
                  />
                </g>
              </svg>
            </div>
            <div
              className="starOverlay"
              style={
                Object {
                  "backgroundColor": "white",
                  "bottom": "0",
                  "mixBlendMode": "color",
                  "opacity": "unset",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "right": "0",
                  "top": "0",
                  "width": "40%",
                  "zIndex": "1",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="right-corner"
    >
      shortandsweeet, April 13, 2019
    </div>
  </div>
  <h3
    className="review-summary"
  >
    I'm enjoying wearing these shades
  </h3>
  <div
    className="review-main"
  >
    <div
      className="review-body"
    >
      <p>
        Comfortable and practical.
      </p>
    </div>
    <div
      className="thumbnail-display"
    >
      <div>
        <img
          alt="Review photo 1 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_1"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
      <div>
        <img
          alt="Review photo 2 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_2"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
    </div>
    <div
      className="recommend"
    >
      ☑ I recommend this product
    </div>
    <div
      className="review-helpfulness-voting"
    >
      <p>
        Helpful? 
        <a
          onClick={[Function]}
        >
           Yes
        </a>
         (
        5
        )
      </p>
    </div>
  </div>
</div>
`;

exports[`Reviews component renders correctly 1`] = `
<div
  className="reviews"
>
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      5
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>
  <div
    className="reviews-list"
  />
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      MORE REVIEWS
    </button>
    <button
      onClick={[Function]}
    >
      ADD A REVIEW + 
    </button>
  </div>
</div>
`;

exports[`ReviewsList component renders correctly 1`] = `
Array [
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      5
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>,
  <div
    className="reviews-list"
  />,
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      MORE REVIEWS
    </button>
    <button
      onClick={[Function]}
    >
      ADD A REVIEW + 
    </button>
  </div>,
]
`;

exports[`ReviewsSorting component renders correctly 1`] = `
<div
  className="reviews-sorting"
>
  <label
    htmlFor="sorting-option"
  >
     reviews, sorted by 
  </label>
  <select
    name="sorting-option"
  >
    <option
      value="relevant"
    >
      relevant
    </option>
    <option
      value="helpful"
    >
      helpful
    </option>
    <option
      value="newest"
    >
      newest
    </option>
  </select>
</div>
`;
